Fix: Main Overflow Issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ input{
 }
 
 .main{
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .section{
